--- a/library-seat-backend/.env
+++ b/library-seat-backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://rashvitamec22:<db_password>@cluster0.cfyixbc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://rashvitamec22:78GZP12XZHQFz4sy@cluster0.cfyixbc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random
 JWT_EXPIRE=24h
 FRONTEND_URL=http://localhost:3000
