--- a/library-seat-backend/package.json
+++ b/library-seat-backend/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seedAllSeats.js"
   },
   "keywords": [
     "library",
