--- a/library-seat-backend/package.json
+++ b/library-seat-backend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "node scripts/testAPI.js",
     "seed": "node scripts/seed.js",
     "fix-seats": "node scripts/fixCompleteSeats.js"
   },
@@ -23,8 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
-    "node-cron": "^3.0.3",
-    "axios": "^1.6.2"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
