--- a/library-seat-backend/package.json
+++ b/library-seat-backend/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node scripts/seed.js",
-    "fix-seats": "node scripts/fixCompleteSeats.js"
+    "seed": "node scripts/seedDatabase.js",
+    "seed:old": "node scripts/seed.js",
+    "seed:complete": "node scripts/completeSeed.js",
+    "fix-seats": "node scripts/fixCompleteSeats.js",
+    "reset-db": "node scripts/seedDatabase.js"
   },
   "keywords": ["library", "seat", "booking", "api"],
   "author": "Your Name",
