--- a/library-seat-backend/package.json
+++ b/library-seat-backend/package.json
@@ -7,10 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedDatabase.js",
-    "seed:old": "node scripts/seed.js",
-    "seed:complete": "node scripts/completeSeed.js",
-    "fix-seats": "node scripts/fixCompleteSeats.js",
-    "reset-db": "node scripts/seedDatabase.js"
+    "verify": "node scripts/verifyDB.js",
+    "reset-db": "node scripts/seedDatabase.js",
+    "test-api": "node scripts/testAPI.js"
   },
   "keywords": ["library", "seat", "booking", "api"],
   "author": "Your Name",
