--- a/library-seat-backend/package.json
+++ b/library-seat-backend/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedDatabase.js",
+    "force-seed": "node scripts/forceSeedDatabase.js",
     "verify": "node scripts/verifyDB.js",
-    "reset-db": "node scripts/seedDatabase.js",
+    "reset-db": "node scripts/forceSeedDatabase.js",
     "test-api": "node scripts/testAPI.js"
   },
   "keywords": ["library", "seat", "booking", "api"],
