--- a/library-seat-backend/package.json
+++ b/library-seat-backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node scripts/seedDatabase.js",
+    "seed": "node scripts/fixCompleteSeats.js",
     "force-seed": "node scripts/forceSeedDatabase.js",
     "verify": "node scripts/verifyDB.js",
     "reset-db": "node scripts/forceSeedDatabase.js",
