--- a/backend/.env
+++ b/backend/.env
@@ -7,8 +7,8 @@ NODE_ENV=development
 # LIBRARY_LATITUDE=25.2706458
 # LIBRARY_LONGITUDE=82.9824016
 # ATTENDANCE_RADIUS_METERS=100
-LIBRARY_LATITUDE=25.2610812
-LIBRARY_LONGITUDE=82.983804
+LIBRARY_LATITUDE=25.2706458
+LIBRARY_LONGITUDE=82.9824016
 # Increase radius for testing
 ATTENDANCE_RADIUS_METERS=100
 # Attendance Settings
